odoo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo-service
spec:
  type: LoadBalancer
  selector:
    app: odoo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8069
